*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130a.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130a.htm
@@ -10,10 +10,10 @@
   </head>
   <body>
     <h1>
-      Launching a Java program
+      Launching a Java applet
     </h1>
-    <p>The simplest way to launch a Java program is to run it using the <strong> Java Application </strong>
-    launch configuration.&nbsp; This launch configuration uses information
+    <p>If your Java program is structured as an applet, you can use the <strong> Java
+    Applet </strong>launch configuration.&nbsp; This launch configuration uses information
     derived from the workbench preferences and your program's Java project to launch the program.
     </p>
     <ol>
@@ -22,32 +22,28 @@
       </li>
       <li>
         Select
-        <strong>Run &gt; Run As &gt; Java Application </strong>in the workbench
+        <strong>Run &gt; Run As &gt; Java Applet </strong>in the workbench
         menu bar.&nbsp;
       </li>
       <li>
-        Your program is now launched, and text output is shown in the Console.
+        Your program is now launched.
       </li>
     </ol>
-    <p>You can also launch a Java program by selecting a project instead of the
+    <p>You can also launch a Java applet by selecting a project instead of the
     compilation unit or class file.&nbsp; You will be prompted to select a class
-    from those classes that define a <em>main</em> method.&nbsp; (If only one class with a main method is
+    from those classes that extend Applet.&nbsp; (If only one applet class is
         found in the project, that class is launched as if you selected it.)</p>
-    <p>You can launch a program from an open editor by using <strong>Run &gt;
-    Run As &gt; Java Application </strong>in the editor's popup
+    <p>You can launch an applet from an open editor by using <strong>Run &gt;
+    Run As &gt; Java Applet </strong>in the editor's popup
     menu.&nbsp;&nbsp;</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-      <a href="../concepts/concepts-6.htm">Java views</a><br>
-       <a href="../concepts/concepts-7.htm">Java editor</a><br>
        <a href="../concepts/concepts-10.htm">Debugger</a>
     </p>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-      <a href="../tasks/tasks-141.htm">Connecting to a remote VM with the Java Remote Application launcher</a><br>
        <a href="../tasks/tasks-131.htm">Relaunching a program</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
-       <a href="../tasks/tasks-129.htm">Setting execution arguments</a><br>
        <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a><br>
     </p>
     <p>
