--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144c.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144c.htm
@@ -11,24 +11,38 @@
 <p> 
       An enabling condition can be applied to line breakpoints, exception breakpoints, watchpoints and method breakpoints. When an
 enabling condition is applied to a breakpoint, the breakpoint
-      suspends execution of a thread only when its enabling condition is true. </p>
+      suspends execution of a thread in one of these cases: </p>
+<ul>
+  <li>when the enabling condition is true</li>
+  <li>when the enabling condition changes</li>
+</ul>
 <p> To set a condition on a breakpoint: </p>
-    <ol>
+<ol>
       <li>
-        Select the breakpoint to which a hit count is to be added.
+        Find the breakpoint to which an enabling condition is to be applied (in
+        the Breakpoints view or in the editor marker bar).
       </li>
       <li>
-        From the breakpoint&#39;s pop-up menu, select <strong>Properties...</strong>
+        From the breakpoint&#39;s pop-up menu, select <strong>Breakpoint
+        Properties...</strong>.&nbsp; The Breakpoint properties dialog will open.
       </li>
-  <li> A Breakpoint properties dialog will open. </li>
   <li> In the properties dialog, check the <strong>Enable Condition</strong> checkbox.&nbsp; </li>
-  <li> In the <strong>Condition</strong> field enter the boolean expression for 
+  <li> In the <strong>Condition</strong> field enter the expression for 
     the breakpoint condition. </li>
+  <li> Do one of the following:
+    <ul>
+      <li>If you want the breakpoint to stop every time the condition evaluates
+        to <em>true</em>, select the <strong>condition is 'true' </strong>option.&nbsp;
+        The expression provided must be a boolean expression.</li>
+      <li>If you want the breakpoint to stop only when the result of the
+        condition changes, select the <strong>value of condition changes </strong>option.</li>
+    </ul>
+ </li>
   <li> Click <strong>OK</strong> to close the dialog and commit the changes. While 
     the breakpoint is enabled, thread execution suspends before that line of code 
     is executed if the breakpoint condition evaluates to <em>true</em>.&nbsp; 
   </li>
-    </ol>
+</ol>
 <p>
     A conditional breakpoint has a question mark overlay on the breakpoint icon.</p>
 <p> <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"> 
