--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -21,7 +21,18 @@
       same place, consider disabling the breakpoint when you don't need it
       (using <strong>Disable Breakpoint </strong>in the breakpoint context menu
       or the <strong>Breakpoints view</strong>) and enabling it when needed
-      again.&nbsp;<br>
+      again.&nbsp;
+      </li>
+      <li>
+      You can use conditional breakpoints in <strong> Breakpoint Properties... </strong>to
+      control when a breakpoint actually halts execution.&nbsp; You can specify
+      whether you want the breakpoint to suspend execution only when the
+      condition is true, or when the condition value changes.
+      </li>
+      <li>
+      You can use <strong>Stop in main&nbsp;</strong> in a Java Application
+      launch configuration to cause your program to stop at the main method when
+      you run it under debug mode.<br>
       </li>
     </ul>
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
