*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
@@ -30,6 +30,10 @@
         Your program is now launched and the launched process appears in the Debug view.&nbsp;
       </li>
     </ol>
+    <p>If you want your program to stop in the <em>main</em>  method so that you
+    can step through its complete execution, create a <strong> Java Application</strong>
+    launch configuration and check the <strong>Stop in main </strong>checkbox on
+    the <strong>Main </strong>page.&nbsp;</p>
     <p>You can also debug a Java program by selecting a project instead of the
     compilation unit or class file.&nbsp; You will be prompted to select a class
     from those classes that define a <em>main</em> method.&nbsp; (If only one class with a main method is
