--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
@@ -39,7 +39,9 @@
     <blockquote>
       <ul>
         <li>The <strong>Main</strong> tab defines the class to be launched. Enter the name of the project containing the class to launch in the project field, and the fully qualified
-        name of the main class in the the Main class field.&nbsp;<br>
+        name of the main class in the the Main class field.&nbsp;Check the <strong>Stop
+          in main</strong> checkbox if you want the program to stop in the main method
+          whenever the program is launched in debug mode.<br>
           <br>
         Note:&nbsp; You do not have to specify a project, but doing so allows a
         default classpath, source lookup path, and JRE to be chosen.</li>
