*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
@@ -10,14 +10,27 @@
   </head>
   <body>
     <h1>
-      Connecting to a remote VM with the remote Java application launch configuration
+      Using the remote Java application launch configuration
     </h1>
+    <p>The <strong>Remote Java Application </strong> launch configuration should
+    be used when debugging an application that is running on a remote VM.&nbsp;
+    Since the application is started on the remote system, the launch
+    configuration does not specify the usual information about the JRE, program
+    arguments, or VM arguments.&nbsp; Instead, information about connecting to
+    the application is supplied.
+    </p>
+    <p>To create a <strong>Remote Java Application</strong>  launch
+    configuration, do the following:
+    </p>
     <ol>
       <li>
-        From the drop-down menu on the <strong>Debug</strong> button in the workbench toolbar, select <strong>Debug...</strong>.
+        Select <strong>Run &gt;Debug...</strong>.from the workbench menu bar (or
+        <strong>Debug... </strong>from the drop-down menu on the <strong>Debug</strong> 
+        tool bar button) to show the launch configuration dialog.
       </li>
       <li>
-        In the launch configuration dialog, select the <strong>Remote Java Application</strong> entry in the left hand view.
+        Select the <strong>Remote Java Application</strong>  in the list of
+        configuration types on the left.
       </li>
       <li>
         Click the <strong>New</strong> button. A new remote launch configuration is created and three tabs are shown: <strong>Connect</strong>,
@@ -45,6 +58,8 @@
         the launcher is unable to connect to a VM at the specified address, an error message appears.
       </li>
     </ol>
+    <p>Specific instructions for setting up the remote VM should be obtained
+    from your VM provider.&nbsp;</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-10.htm">Debugger</a>
