*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
@@ -35,6 +35,19 @@
         text stream.&nbsp;&nbsp;
       </li>
     </ol>
+    <p>To set the fonts used in the Console view:</p>
+    <ol>
+      <li>
+        From the menu bar, select <strong>Window</strong> &gt; <strong>Preferences
+        &gt; Workbench &gt; Fonts </strong>to view the Fonts Preferences page.
+      </li>
+      <li>
+        Select <strong>Debug Console Text Font </strong>from the list of fonts
+        and use the <strong>Change... </strong>button to change the font.&nbsp;
+        (The <strong>Detail Pane Text Font</strong> can be used to change the
+        font of the debugger's detail pane).
+      </li>
+    </ol>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
     </p>
