--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -19,7 +19,7 @@ Last revised March 4, 2003</p>
 <p align="left">
 
 <strong>This software is OSI Certified Open Source Software.<br>
-OSI Certified is a certification mark of the Open Source Initiative.</strong></p>
+OSI Certified is a certification mark of the Open Source Initiative.&nbsp;</strong></p>
 
 <blockquote>
 
