Add compatbility item for IJavaProject.isOnClasspath

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -585,6 +585,15 @@ change may affect clients that listen for Java element deltas (via <code>JavaCor
 if they make overly strong assumptions about triggering conditions and contents.
 (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=32981">32981</a>)</p>
 
+<h4>IJavaProject.isOnClasspath</h4>
+<p>For Eclipse 2.1, the API predicate <code>IJavaProject.isOnClasspath</code>
+(both forms) was changed to do the more standard thing of returning false rather
+than throwing <code>JavaModelException</code> in some cases. While this change
+is within the original spirit of the original API&nbsp; contract, it breaks
+source compatibility because <code>JavaModelException</code> is a checked
+exception; code that invokes this method and catches <code>JavaModelException</code>
+may need to be rewritten. (bug <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=33754">33754</a>)</p>
+
 <h3>
  JDT - UI</h3>
 
